--- a/Curso Front End Alura/style.css
+++ b/Curso Front End Alura/style.css
@@ -48,3 +48,37 @@ h1 {
     font-size: 14px;
     font-family: "DM Sans", sans-serif;
 }
+
+/* Desafio */
+
+.sidebar__bibli {
+    background-color: #121212;
+    margin-top: 15px;
+    border-radius: 8px;
+    padding: 16px 0px 16px;
+}
+
+.sidebar__bibli .header {
+    display: flex;
+    padding: 12px 16px 8px;
+}
+
+.sidebar__bibli .header button {
+    background: none;
+    border: none;
+    font-family: "DM Sans", sans-serif;
+    color: #B3B3B3;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+    padding: 4px 8px;
+}
+
+.sidebar__bibli .header button:hover {
+    color: #FFF;
+}
+
+.sidebar__bibli .header .plus button {
+    position: relative;
+    left: 90px;
+}
