--- a/Curso Front End Alura/style.css
+++ b/Curso Front End Alura/style.css
@@ -49,36 +49,127 @@ h1 {
     font-family: "DM Sans", sans-serif;
 }
 
-/* Desafio */
+/* Aula 02 */
 
-.sidebar__bibli {
+.library {
     background-color: #121212;
-    margin-top: 15px;
     border-radius: 8px;
-    padding: 16px 0px 16px;
-}
-
-.sidebar__bibli .header {
     display: flex;
-    padding: 12px 16px 8px;
-}
-
-.sidebar__bibli .header button {
-    background: none;
-    border: none;
-    font-family: "DM Sans", sans-serif;
-    color: #B3B3B3;
-    font-size: 16px;
-    font-weight: 600;
-    cursor: pointer;
+    justify-content: space-between;
+    flex-direction: column;
     padding: 4px 8px;
+    color: #B3B3B3;
+    font-weight: 600;
+    font-size: 14px;
+    margin-top: 10px;
 }
 
-.sidebar__bibli .header button:hover {
+.library .library__content {
+    display: flex;
+    justify-content: space-between;
+}
+
+.library .library__button {
+    display: flex;
+    margin-right: 10px;
+    color: #B3B3B3;
+    background-color: transparent;
+    border: 0px;
+    font-size: 14px;
+    font-weight: 700;
+    font-family: "DM Sans", sans-serif;
+    text-align: center;
+    text-decoration: none;
+    text-transform: none;
+    padding: 20px 10px;
+}
+
+.library .library__button .fa {
+    font-size: 20px;
+    margin-right: 10px;
+    font-weight: 300;
+    padding-right: 8px;
+}
+
+.library .library__content .fa-plus {
+    margin: 24px 10px;
+}
+
+.section-playlist {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 20px;
+    background-color: #242424;
+    color: #B3B3B3;
+    font-weight: 600;
+    font-size: 14px;
+    margin: 8px 0px;
+    padding: 16px 20px;
+    border-radius: 10px;
+}
+
+.section-playlist .section-playlist__content {
+    display: flex;
+    flex-direction: column;
+}
+
+.section-playlist__content .text {
+    padding-bottom: 14px;
+    color: #FFF;   
+    font-family: "DM Sans", sans-serif;
+}
+
+.section-playlist__content .title {
+    font-weight: 700px;
+}
+
+.section-playlist__content .subtitle {
+    font-weight: 500;
+    font-size: 12px;
+}
+
+.section-playlist__content .section-playlist__button {
+    display: flex;
+    justify-content: center;
+    background-color: #FFF;
+    color: #000;
+    border-radius: 20px;
+    font-size: 12px;
+    font-weight: 700;
+    font-family: "DM Sans", sans-serif;
+    text-decoration: none;
+    text-transform: none;
+    margin-top: 12px;
+    padding: 10px;
+    border: 0px;
+    width: 113px;
+}
+
+.sidebar .cookies {
+    margin: 25px 20px;
+}
+
+.sidebar .cookies a {
+    color: #B3B3B3;
+    font-weight: 500;
+    font-size: 10px;
+    text-decoration: none;
+}   
+
+.sidebar .cookies a:hover {
+    text-decoration: underline;
+}
+
+.languages .languages__button {
+    background-color: transparent;
+    border: 1px solid #878787;
     color: #FFF;
-}
-
-.sidebar__bibli .header .plus button {
-    position: relative;
-    left: 90px;
+    cursor: pointer;
+    font-weight: bold;
+    align-items: center;
+    width: 170px;
+    margin: 8px;
+    padding: 8px;
+    border-radius: 20px;
 }
