--- a/Curso Front End Alura/src/styles/style.css
+++ b/Curso Front End Alura/src/styles/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: #000;
+    font-family: var(--font-dm-sans);
 }
 
 h1 {
@@ -46,7 +47,6 @@ h1 {
     text-decoration: none;
     font-weight: 600;
     font-size: 14px;
-    font-family: "DM Sans", sans-serif;
 }
 
 /* Aula 02 */
@@ -77,7 +77,6 @@ h1 {
     border: 0px;
     font-size: 14px;
     font-weight: 700;
-    font-family: "DM Sans", sans-serif;
     text-align: center;
     text-decoration: none;
     text-transform: none;
@@ -117,7 +116,6 @@ h1 {
 .section-playlist__content .text {
     padding-bottom: 14px;
     color: #FFF;   
-    font-family: "DM Sans", sans-serif;
 }
 
 .section-playlist__content .title {
@@ -137,7 +135,6 @@ h1 {
     border-radius: 20px;
     font-size: 12px;
     font-weight: 700;
-    font-family: "DM Sans", sans-serif;
     text-decoration: none;
     text-transform: none;
     margin-top: 12px;
@@ -173,3 +170,4 @@ h1 {
     padding: 8px;
     border-radius: 20px;
 }
+
