--- a/Curso Front End Alura/src/styles/vars.css
+++ b/Curso Front End Alura/src/styles/vars.css
@@ -7,6 +7,7 @@
     --bg-icon: #131313;
     --bg-arrow-color: rgba(0,0,07);
     --bg-search-color: #242424;
+    --bg-playlist-color: #121212;
     --bg-subscribe-color: #A7A7A7;
     --bg-black: #000;
     --bg-white: #FFFFFF;
